--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,6 @@
 
 body,
 html {
-
-
   /*Color Variables*/
   --blackish: #0e0d0d;
   --whiteish: #f9f7fd;
@@ -32,13 +30,10 @@ html {
   height: 100% !important;
   min-height: 100vh;
   max-width: 100vw;
-  /*color: var(--whiteish);*/
-  color: var(--main);
   color : var(--blackish);
-
   width: 100%;
   height: 100vh;
-  /*background: url("./style/background.webp"), var(--whiteish);*/
+  background: url("./style/background4.webp");
   background-color: var(--main);
   background-position: center;
   background-attachment: fixed;
@@ -49,13 +44,18 @@ html {
 a,
 p {
   font-size: 18px;
-  /*color: var(--blackish);*/
+  color: var(--blackish);
   transition: 0.3s;
   text-decoration: none;
 }
 a:focus,
 a:visited,
-a:active {
+a:active,
+a:hover {
   text-decoration: none;
-  color: inherit;
+  /*color: inherit;*/
+}
+
+a:hover {
+  color: var(--secondary);
 }
