--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @import "./style/animations.css";
 @import "./style/header.css";
 @import "./style/intro.css";
+@import "./style/team.css";
 @import "./style/footer.css";
 @import "./style/responsive.css";
 
@@ -15,10 +16,9 @@ html {
   /*Color Variables*/
   --blackish: #0e0d0d;
   --whiteish: #f9f7fd;
-  --main: #21759C;
-  --secondary:#e84e24;
-  --tertiary:#434341;
-
+  --main: #21759c;
+  --secondary: #e84e24;
+  --tertiary: #434341;
 
   /*General*/
   /*font-family: "Poppins", serif, arial;*/
@@ -30,7 +30,7 @@ html {
   height: 100% !important;
   min-height: 100vh;
   max-width: 100vw;
-  color : var(--blackish);
+  color: var(--blackish);
   width: 100%;
   height: 100vh;
   background: url("./style/background4.webp");
