--- a/src/style/intro.css
+++ b/src/style/intro.css
@@ -22,11 +22,14 @@
   max-width: 100%;
   max-height: 200px;
   margin: auto auto 35px auto;
-
   -webkit-box-reflect: below -12px linear-gradient(transparent, transparent, #0004);
   animation: anipers 15s cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite
     alternate both;
 }
+.firstP {
+  margin-bottom: 50px;
+}
+
 .under {
   width: 70%;
   margin: 20px auto;
@@ -37,4 +40,16 @@
 }
 .under p {
   font-size: 20px;
+}
+
+.introInline {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  margin-bottom: 25px;
+}
+
+.introInline img {
+  max-width: 75px;
+  margin-right: 15px;
 }
