--- a/index.css
+++ b/index.css
@@ -1,13 +1,4 @@
-/***INDEX***/
-
-/***COMPONENTS STYLES***/
-/*
-@import "./style/animations.css";
-@import "./style/header.css";
-@import "./style/intro.css";
-@import "./style/team.css";
-@import "./style/footer.css";
-@import "./style/responsive.css";*/
+/******INDEX******/
 
 /***BODY***/
 body,
@@ -32,7 +23,7 @@ html {
   color: var(--blackish);
   width: 100%;
   height: 100vh;
-  background: url("./style/background4.webp");
+  background: url("./ressources/background4.webp");
   background-color: var(--main);
   background-position: center;
   background-attachment: fixed;
