--- a/index.css
+++ b/index.css
@@ -1,5 +1,8 @@
 /******INDEX******/
 
+/***Font***/
+@import url("https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,400;0,500;1,300&display=swap");
+
 /***BODY***/
 body,
 html {
@@ -28,6 +31,7 @@ html {
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
+  overflow: hidden;
 }
 
 a,
@@ -43,6 +47,7 @@ a:visited,
 a:active,
 a:hover {
   text-decoration: none;
+  transition: 0.4s;
 }
 
 a:hover {
@@ -51,28 +56,11 @@ a:hover {
 
 /***HEADER***/
 
-nav h1 {
-  text-align: center;
-  color: var(--);
-  font-size: 20px;
-  align-self: center;
-  padding-left: 10px;
-  width: 100%;
-  display: flex;
-  font-weight: 500;
-  flex-wrap: wrap;
-}
-
-.logoText {
-  display: flex;
-  flex-direction: row;
-}
-
 /*Header Nav*/
 nav {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-end; /**/
   position: fixed;
   left: 0;
   top: 0;
@@ -93,8 +81,13 @@ nav .logo {
   margin: 11px 50px 11px 0;
   height: auto;
 }
+
 /*nav links*/
-nav a {
+.txtWrapper {
+  margin-bottom: 15px;
+}
+.txtWrapper a {
+  font-family: spectral, arial;
   margin: 0 10px;
 }
 
@@ -258,3 +251,72 @@ nav a {
 }
 
 /***RESPONSIVE***/
+
+/**********768************/
+@media (max-width: 768px) {
+  /***HEADER***/
+  nav {
+    flex-direction: column;
+    border-radius: unset;
+    align-items: center;
+    padding-top: 15px !important;
+
+    width: 100%;
+    height: auto;
+    justify-content: center;
+    padding: unset;
+  }
+  nav .logo {
+    float: unset;
+    margin: auto;
+  }
+  .txtWrapper {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+  }
+  .txtWrapper a {
+    margin: 15px 10px 10px 10px;
+  }
+}
+
+/**********468************/
+@media (max-width: 468px) {
+  /***HEADER***/
+  .txtWrapper a {
+    font-size: 15px;
+  }
+}
+
+/**********370************/
+@media (max-width: 370px) {
+  /***HEADER***/
+  .txtWrapper {
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0;
+  }
+  .txtWrapper a {
+    padding: 5px;
+    margin: 0;
+    background-color: var(--secondary);
+    justify-content: center;
+    width: 100%;
+    height: 25px;
+    color: var(--whiteish);
+    display: flex;
+    flex-direction: column;
+    border: 1px solid var(--whiteish);
+  }
+
+  .txtWrapper a:focus,
+  .txtWrapper a:visited,
+  .txtWrapper a:active,
+  .txtWrapper a:hover {
+    font-weight: bold;
+    /*border: 1px solid var(--main);*/
+  }
+}
