--- a/index.css
+++ b/index.css
@@ -31,9 +31,10 @@ html {
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
-  overflow: hidden;
+  /*overflow: hidden; /**/
 }
 
+/*texts/links*/
 a,
 p {
   font-size: 18px;
@@ -42,6 +43,7 @@ p {
   text-decoration: none;
 }
 
+/*links*/
 a:focus,
 a:visited,
 a:active,
@@ -49,7 +51,6 @@ a:hover {
   text-decoration: none;
   transition: 0.4s;
 }
-
 a:hover {
   color: var(--secondary);
 }
@@ -60,7 +61,7 @@ a:hover {
 nav {
   display: flex;
   flex-direction: row;
-  align-items: flex-end; /**/
+  align-items: flex-end;
   position: fixed;
   left: 0;
   top: 0;
@@ -73,6 +74,11 @@ nav {
   z-index: 1000;
   border-radius: 0 0 15px 0;
   box-shadow: -65px -75px 50px 50px var(--blackish);
+  background: url("./ressources/background7.webp");
+  background-color: var(--whiteish);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 /*Header Logo*/
 nav .logo {
@@ -81,7 +87,6 @@ nav .logo {
   margin: 11px 50px 11px 0;
   height: auto;
 }
-
 /*nav links*/
 .txtWrapper {
   margin-bottom: 15px;
@@ -94,32 +99,52 @@ nav .logo {
 /***INTRO***/
 
 #intro {
+  margin: 115px auto;
   display: flex;
-  margin-top: 125px;
-  -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both 0.6s;
-  animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both 0.6s;
+  flex-direction: row-reverse;
+  width: 100%;
+  justify-content: space-between;
+  padding: 25px;
+  max-width: 90%;
+  height: auto;
 }
-.intro {
-  width: 70%;
-  height: 100%;
-  margin: auto;
-  background-color: var(--whiteish);
+.intro,
+.actu {
+  border-radius: 7px;
   display: flex;
   flex-direction: column;
+  padding: 10px;
+}
+.intro {
+  flex: 0.9;
+  margin-left: 50px;
+  background-color: var(--whiteish);
   border-radius: 5px;
   box-shadow: 0px 0px 20px -5px var(--tertiary);
-  text-align: justify;
+  background: url("./ressources/background7.webp");
+  background-color: var(--whiteish);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#intro h1 {
+  font-family: spectral, arial;
+  align-self: center;
+  text-align: center;
+  margin: 15px auto 0 auto;
 }
 #intro .logo {
   max-width: 100%;
-  max-height: 200px;
+  max-height: 150px;
   margin: auto auto 35px auto;
   -webkit-box-reflect: below -12px linear-gradient(transparent, transparent, #0004);
   animation: anipers 10s cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite
     alternate both;
 }
-.firstP {
-  margin-bottom: 50px;
+.over {
+  display: flex;
+  flex-direction: column;
 }
 .under {
   width: 70%;
@@ -131,6 +156,7 @@ nav .logo {
 }
 .under p {
   font-size: 20px;
+  text-align: left;
 }
 .introInline {
   display: flex;
@@ -142,8 +168,23 @@ nav .logo {
   max-width: 75px;
   margin-right: 15px;
 }
-
-/***TEAM***/
+.lastP {
+  text-align: justify !important;
+}
+.actu {
+  flex: 0.7;
+}
+.actu iframe {
+  box-shadow: 0px 0px 20px -5px var(--tertiary);
+  border-radius: 7px;
+}
+.actu h1 {
+  color: var(--whiteish);
+  margin: 10px auto 25px auto !important;
+  border-bottom: 2px solid var(--whiteish);
+  width: fit-content;
+  font-family: spectral, arial;
+}
 
 /***TEAM***/
 #équipe {
@@ -152,7 +193,6 @@ nav .logo {
   -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both 0.6s;
   animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both 0.6s;
 }
-
 .team {
   width: 70%;
   height: 100%;
@@ -165,7 +205,6 @@ nav .logo {
   padding: 25px;
   flex-wrap: wrap;
 }
-
 #équipe .photo {
   max-width: 100%;
   max-height: 150px;
@@ -173,7 +212,6 @@ nav .logo {
   border-radius: 50%;
   box-shadow: 2px 2px 7px 0.5px var(--blackish);
 }
-
 .member {
   display: flex;
   flex-direction: column;
@@ -182,7 +220,6 @@ nav .logo {
   text-align: center;
   max-width: 500px;
 }
-
 .member h2 {
   font-size: 20px;
   margin: -20px auto 0 auto;
@@ -194,10 +231,8 @@ nav .logo {
 }
 .member h3 {
   color: var(--secondary);
-
   font-size: 16px;
   margin: 5px 0 10px 0;
-  /*padding: 0;*/
 }
 .member p {
   margin: auto;
@@ -209,25 +244,6 @@ nav .logo {
 /***FOOTER***/
 
 /***ANIMATION***/
-
-/*FADE IN*/
-@-webkit-keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
 /*LOGO SWING*/
 @keyframes anipers {
   0% {
@@ -252,6 +268,28 @@ nav .logo {
 
 /***RESPONSIVE***/
 
+/**********1100************/
+@media (max-width: 1100px) {
+  /***INTRO***/
+
+  #intro {
+    flex-direction: column;
+    justify-content: center;
+    height: 150vh;
+  }
+
+  .intro,
+  .actu {
+    flex: 1;
+    width: 100%;
+    margin: 25px auto 25px auto;
+    padding: 0;
+  }
+  .actu {
+    height: 500px;
+  }
+}
+
 /**********768************/
 @media (max-width: 768px) {
   /***HEADER***/
@@ -260,7 +298,6 @@ nav .logo {
     border-radius: unset;
     align-items: center;
     padding-top: 15px !important;
-
     width: 100%;
     height: auto;
     justify-content: center;
@@ -277,6 +314,9 @@ nav .logo {
   }
   .txtWrapper a {
     margin: 15px 10px 10px 10px;
+  }
+  #intro {
+    margin: 180px auto;
   }
 }
 
@@ -311,12 +351,13 @@ nav .logo {
     flex-direction: column;
     border: 1px solid var(--whiteish);
   }
-
   .txtWrapper a:focus,
   .txtWrapper a:visited,
   .txtWrapper a:active,
   .txtWrapper a:hover {
     font-weight: bold;
-    /*border: 1px solid var(--main);*/
+  }
+  #intro {
+    margin: 260px auto;
   }
 }
