--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ html {
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
-  /*overflow: hidden; /**/
+  scroll-behavior: smooth;
 }
 
 /*texts/links*/
@@ -42,7 +42,6 @@ p {
   transition: 0.3s;
   text-decoration: none;
 }
-
 /*links*/
 a:focus,
 a:visited,
@@ -56,7 +55,6 @@ a:hover {
 }
 
 /***HEADER***/
-
 /*Header Nav*/
 nav {
   display: flex;
@@ -97,7 +95,7 @@ nav .logo {
 }
 
 /***INTRO***/
-
+/*Intro Wrapper*/
 #intro {
   margin: 115px auto;
   display: flex;
@@ -108,6 +106,7 @@ nav .logo {
   max-width: 90%;
   height: auto;
 }
+/*Intro elements*/
 .intro,
 .actu {
   border-radius: 7px;
@@ -115,10 +114,10 @@ nav .logo {
   flex-direction: column;
   padding: 10px;
 }
+/*Right*/
 .intro {
   flex: 0.9;
   margin-left: 50px;
-  background-color: var(--whiteish);
   border-radius: 5px;
   box-shadow: 0px 0px 20px -5px var(--tertiary);
   background: url("./ressources/background7.webp");
@@ -127,25 +126,28 @@ nav .logo {
   background-size: cover;
   background-repeat: no-repeat;
 }
-
+/*Right title*/
 #intro h1 {
   font-family: spectral, arial;
   align-self: center;
   text-align: center;
   margin: 15px auto 0 auto;
 }
+/*Intro Logo*/
 #intro .logo {
   max-width: 100%;
   max-height: 150px;
-  margin: auto auto 35px auto;
+  margin: auto;
   -webkit-box-reflect: below -12px linear-gradient(transparent, transparent, #0004);
   animation: anipers 10s cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite
     alternate both;
 }
+/*Upper zone*/
 .over {
   display: flex;
   flex-direction: column;
 }
+/*Lower zone*/
 .under {
   width: 70%;
   margin: 20px auto;
@@ -154,60 +156,71 @@ nav .logo {
   flex-direction: column;
   justify-content: center;
 }
+/*Paragraphs*/
 .under p {
   font-size: 20px;
   text-align: left;
   line-height: 150%;
 }
+/*Paragraphs with icons*/
 .introInline {
   display: flex;
   text-align: center;
   align-items: center;
   margin-bottom: 25px;
 }
+/*Icons*/
 .introInline img {
   max-width: 75px;
   margin-right: 15px;
 }
+/*last paragraph*/
 .lastP {
   text-align: justify !important;
 }
+/*Left*/
 .actu {
   flex: 0.7;
   min-height: 500px;
 }
+/*"News" Iframe*/
 .actu iframe {
   box-shadow: 0px 0px 20px -5px var(--tertiary);
   border-radius: 7px;
 }
-.actu h1 {
+/*Left and Team Title*/
+.actu h1,
+#equipe {
   color: var(--whiteish);
   margin: 10px auto 25px auto !important;
   border-bottom: 2px solid var(--whiteish);
   width: fit-content;
   font-family: spectral, arial;
 }
-
 /***TEAM***/
-#équipe {
+/*Section Wrapper*/
+.equipe {
   display: flex;
-  margin-top: 125px;
-  -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both 0.6s;
-  animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both 0.6s;
-}
-.team {
-  width: 70%;
-  height: 100%;
+  text-align: center;
+  flex-direction: column;
   margin: auto;
-  background-color: var(--whiteish);
+  display: flex;
+  width: 89%; /**/
+  justify-content: space-between;
+  border-radius: 7px;
+  height: auto;
+}
+/*Team zone*/
+.team {
+  margin: auto;
   display: flex;
   border-radius: 5px;
-  box-shadow: 0px 0px 20px -5px var(--tertiary);
   text-align: justify;
-  padding: 25px;
   flex-wrap: wrap;
+  background-color: var(--whiteish);
+  box-shadow: 0px 0px 20px -5px var(--tertiary);
 }
-#équipe .photo {
+.equipe .photo {
   max-width: 100%;
   max-height: 150px;
   margin: auto auto 35px auto;
@@ -220,7 +233,8 @@ nav .logo {
   justify-content: center;
   margin: 35px auto 50px auto;
   text-align: center;
-  max-width: 500px;
+  /*background-color: red;*/
+  max-width: 450px;
 }
 .member h2 {
   font-size: 20px;
@@ -244,6 +258,8 @@ nav .logo {
 }
 
 /***FOOTER***/
+/***MISSION***/
+/***CONTACT***/
 
 /***ANIMATION***/
 /*LOGO SWING*/
