--- a/index.css
+++ b/index.css
@@ -4,6 +4,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,400;0,500;1,300&display=swap");
 
 /***BODY***/
+
+body * {
+  z-index: 1;
+}
+
 body,
 html {
   /*Color Variables*/
@@ -32,6 +37,7 @@ html {
   background-size: cover;
   background-repeat: no-repeat;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /*texts/links*/
@@ -197,6 +203,18 @@ nav .logo {
   width: fit-content;
   font-family: spectral, arial;
 }
+/***MISSION***/
+/*Section Wrapper*/
+.missionWrapper {
+}
+/*Mission Title*/
+#mission {
+}
+.mission {
+}
+.mission p {
+}
+
 /***TEAM***/
 /*Section Wrapper*/
 .equipe {
@@ -217,8 +235,6 @@ nav .logo {
   border-radius: 5px;
   text-align: justify;
   flex-wrap: wrap;
-  background-color: var(--whiteish);
-  box-shadow: 0px 0px 20px -5px var(--tertiary);
 }
 .equipe .photo {
   max-width: 100%;
@@ -233,16 +249,32 @@ nav .logo {
   justify-content: center;
   margin: 35px auto 50px auto;
   text-align: center;
-  /*background-color: red;*/
+  padding: 10px;
   max-width: 450px;
+  background: url("./ressources/background7.webp");
+  background-color: var(--whiteish);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 12px;
+  position: relative;
+  transition: 0.4s;
+  border-left: 5.5px solid var(--secondary);
+  transform: perspective(1200px) rotateY(10deg);
+  transition: 0.4s;
+  box-shadow: 7px 7px 10px 2px #454545;
+}
+.member:hover {
+  transform: scale(1.05) perspective(800px) rotateY(0deg);
+  box-shadow: 0px 10px 10px 2px #454545;
 }
 .member h2 {
   font-size: 20px;
   margin: -20px auto 0 auto;
   padding: 0;
-  border-bottom: 1.5px solid var(--tertiary);
   padding-bottom: 5px;
   width: fit-content;
+  border-bottom: 1.5px solid var(--tertiary);
   color: var(--main);
 }
 .member h3 {
@@ -262,7 +294,8 @@ nav .logo {
 /***CONTACT***/
 
 /***ANIMATION***/
-/*LOGO SWING*/
+
+/*logo swing*/
 @keyframes anipers {
   0% {
     transform: translateX(0px);
@@ -282,6 +315,192 @@ nav .logo {
     transform-origin: center;
     transform: perspective(1200px) rotateY(15deg);
   }
+}
+
+/*Background anim*/
+
+@keyframes move-dot1 {
+  0% {
+    transform: translateX(-50%) translateY(-50%);
+  }
+  20% {
+    transform: translateX(-50%) translateY(30%);
+  }
+  100% {
+    transform: translateX(-50%) translateY(30%);
+  }
+}
+@keyframes move-dot2 {
+  0% {
+    transform: translateX(-50%) translateY(-50%);
+  }
+  15% {
+    transform: translateX(-50%) translateY(-10%);
+  }
+  30% {
+    transform: translateX(-10%) translateY(-10%);
+  }
+  100% {
+    transform: translateX(-10%) translateY(-10%);
+  }
+}
+.animation-example {
+  opacity: 0.2;
+  z-index: 0 !important;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  height: 90vmin;
+  width: 90vmin;
+}
+.animation-example > .item {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  height: 50%;
+  width: 50%;
+  transform: translateX(-50%);
+  transform-origin: 50% 100%;
+  pointer-events: none;
+}
+.animation-example > .item:nth-child(2) {
+  transform: translateX(-50%) rotate(90deg);
+}
+.animation-example > .item:nth-child(3) {
+  transform: translateX(-50%) rotate(180deg);
+}
+.animation-example > .item:nth-child(4) {
+  transform: translateX(-50%) rotate(270deg);
+}
+.animation-example > .item > .line {
+  height: 100%;
+  width: calc(50% + 1px);
+  border-right: 2px dashed #5bc0eb;
+}
+.animation-example > .item > .dot {
+  position: absolute;
+  left: 50%;
+  top: 10%;
+  transform: translateX(-50%) translateY(-50%);
+  height: 100%;
+  width: 100%;
+  animation: move-dot1 5.5s linear infinite;
+}
+.animation-example > .item > .dot::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  height: 5%;
+  width: 5%;
+  /*background: #fff;*/
+  background: var(--secondary);
+
+  border: 2px solid #5bc0eb;
+
+  border-radius: 50%;
+}
+.animation-example > .item > .circle {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 20%;
+  width: 20%;
+  border-radius: 50%;
+  background: #5bc0eb;
+}
+.animation-example > .item.-type2 {
+  top: 0;
+  left: 0;
+  transform: none;
+  transform-origin: 100% 100%;
+}
+.animation-example > .item.-type2:nth-child(5) {
+  transform: scaleX(-100%);
+}
+.animation-example > .item.-type2:nth-child(6) {
+  transform: scaleX(-100%) scaleY(-100%);
+}
+.animation-example > .item.-type2:nth-child(7) {
+  transform: scaleY(-100%);
+}
+.animation-example > .item.-type2 > .line {
+  position: absolute;
+  top: 30%;
+  left: calc(30% - 1px);
+  width: 70%;
+  height: 40%;
+  border-right: none;
+  border-left: 2px dashed #5bc0eb;
+  border-bottom: 2px dashed #5bc0eb;
+}
+.animation-example > .item.-type2 > .dot {
+  top: 30%;
+  left: 30%;
+  animation: move-dot2 4s linear infinite;
+}
+.animation-example > .item.-type2 > .circle {
+  top: 30%;
+  left: 30%;
+  transform: translateX(-50%) translateY(-50%);
+}
+.animation-example > .item:nth-of-type(1) > .dot {
+  animation-delay: 0;
+}
+.animation-example > .item:nth-of-type(7) > .dot {
+  animation-delay: 0.5s;
+}
+.animation-example > .item:nth-of-type(2) > .dot {
+  animation-delay: 1s;
+}
+.animation-example > .item:nth-of-type(6) > .dot {
+  animation-delay: 1.5s;
+}
+.animation-example > .item:nth-of-type(3) > .dot {
+  animation-delay: 2s;
+}
+.animation-example > .item:nth-of-type(5) > .dot {
+  animation-delay: 2.5s;
+}
+.animation-example > .item:nth-of-type(4) > .dot {
+  animation-delay: 3s;
+}
+.animation-example > .item:nth-of-type(8) > .dot {
+  animation-delay: 3.5s;
+}
+.animation-example > .center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  height: 50%;
+  width: 50%;
+}
+.animation-example > .center > .circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  border-radius: 50%;
+}
+.animation-example > .center > .circle:nth-child(1) {
+  height: 100%;
+  width: 100%;
+  background: #fff;
+  box-shadow: 0 0 3vmin rgba(0, 0, 0, 0.1);
+}
+.animation-example > .center > .circle:nth-child(2) {
+  height: 80%;
+  width: 80%;
+  border: 2px solid #5bc0eb;
+}
+.animation-example > .center > .circle:nth-child(3) {
+  height: 50%;
+  width: 50%;
+  background: #5bc0eb;
 }
 
 /***RESPONSIVE***/
@@ -384,7 +603,7 @@ nav .logo {
   .txtWrapper a {
     padding: 5px;
     margin: 0;
-    background-color: var(--secondary);
+    background-color: var(--main);
     justify-content: center;
     width: 100%;
     height: 25px;
@@ -396,7 +615,7 @@ nav .logo {
   .txtWrapper a:focus,
   .txtWrapper a:active,
   .txtWrapper a:hover {
-    background-color: var(--main);
+    background-color: var(--secondary);
   }
   #intro {
     margin-top: 200px;
