--- a/index.css
+++ b/index.css
@@ -7,10 +7,11 @@
 body * {
   z-index: 1;
 }
+
 body,
 html {
   /*Color Variables*/
-  --blackish: #0e0d0d;
+  --tertiary: #0e0d0d;
   --whiteish: #f9f7fd;
   --main: #21759c;
   --secondary: #e84e24;
@@ -24,7 +25,7 @@ html {
   height: 100% !important;
   min-height: 100vh;
   max-width: 100vw;
-  color: var(--blackish);
+  color: var(--tertiary);
   width: 100%;
   height: 100vh;
   background: url("./ressources/background6.webp");
@@ -36,14 +37,16 @@ html {
   scroll-behavior: smooth;
   /*overflow-x: hidden !important;*/
 }
+
 /*texts/links*/
 a,
 p {
   font-size: 18px;
-  color: var(--blackish);
+  color: var(--tertiary);
   transition: 0.3s;
   text-decoration: none;
 }
+
 /*links*/
 a:focus,
 a:visited,
@@ -52,9 +55,11 @@ a:hover {
   text-decoration: none;
   transition: 0.4s;
 }
+
 a:hover {
   color: var(--secondary);
 }
+
 /***HEADER***/
 /*Header Nav*/
 nav {
@@ -72,13 +77,14 @@ nav {
   background: var(--whiteish);
   z-index: 1000;
   border-radius: 0 0 15px 0;
-  box-shadow: -65px -75px 50px 50px var(--blackish);
+  box-shadow: -65px -75px 50px 50px var(--tertiary);
   background: url("./ressources/background7.webp");
   background-color: var(--whiteish);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 /*Header Logo*/
 nav .logo {
   position: relative;
@@ -86,14 +92,17 @@ nav .logo {
   margin: 11px 50px 11px 0;
   height: auto;
 }
+
 /*nav links*/
 .txtWrapper {
   margin-bottom: 15px;
 }
+
 .txtWrapper a {
   font-family: spectral, arial;
   margin: 0 10px;
 }
+
 /***INTRO***/
 /*Intro Wrapper*/
 #intro {
@@ -107,6 +116,7 @@ nav .logo {
   max-width: 90%;
   height: auto;
 }
+
 /*Intro elements*/
 .intro,
 .actu {
@@ -115,6 +125,7 @@ nav .logo {
   flex-direction: column;
   padding: 10px;
 }
+
 /*Right*/
 .intro {
   flex: 0.9;
@@ -127,6 +138,7 @@ nav .logo {
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 /*Right title*/
 #intro h1 {
   font-family: spectral, arial;
@@ -134,6 +146,7 @@ nav .logo {
   text-align: center;
   margin: 15px auto 0 auto;
 }
+
 /*Intro Logo*/
 #intro .logo {
   max-width: 100%;
@@ -143,26 +156,109 @@ nav .logo {
   animation: anipers 10s cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite
     alternate both;
 }
+
 /*Upper zone*/
 .over {
   display: flex;
   flex-direction: column;
 }
+
 /*Lower zone*/
 .under {
+  /*
   width: 70%;
   margin: 20px auto;
   padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  */
 }
+
 /*Paragraphs*/
 .under p {
+  /*
+  font-size: 20px;
+  text-align: left;
+  line-height: 150%;
+  */
+}
+
+/*Left*/
+.actu {
+  flex: 0.7;
+  min-height: 500px;
+}
+
+/*"News" Iframe*/
+.actu iframe {
+  box-shadow: 0px 0px 20px -5px var(--tertiary);
+  border-radius: 7px;
+}
+
+/*Left and Team Title*/
+.actu h1,
+#equipe,
+#mission {
+  color: var(--whiteish);
+  margin: 35px auto 25px auto !important;
+  border-bottom: 2px solid var(--whiteish);
+  width: fit-content;
+  font-family: spectral, arial;
+  z-index: 50 !important;
+}
+
+/***MISSION***/
+/*Section Wrapper*/ /*************************************************************/
+.missionWrapper {
+  height: 100vh;
+  width: 50%;
+  margin: auto;
+}
+/*Mission Title*/
+#mission {
+  padding-top: 50px;
+}
+.mission {
+  margin: auto;
+  display: flex;
+  border-radius: 5px;
+  text-align: justify;
+  flex-wrap: wrap;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 50px auto 50px auto;
+  text-align: center;
+  padding: 50px;
+  max-width: 75%;
+  background: url("./ressources/background7.webp");
+  background-color: var(--whiteish);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 12px;
+  position: relative;
+  transition: 0.4s;
+  box-shadow: 7px 7px 10px 2px #454545;
+  width: 100%;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.introInlineWrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+/*Paragraphs*/
+.mission p {
   font-size: 20px;
   text-align: left;
   line-height: 150%;
 }
+
 /*Paragraphs with icons*/
 .introInline {
   display: flex;
@@ -175,40 +271,10 @@ nav .logo {
   max-width: 75px;
   margin-right: 15px;
 }
+
 /*last paragraph*/
 .lastP {
   text-align: justify !important;
-}
-/*Left*/
-.actu {
-  flex: 0.7;
-  min-height: 500px;
-}
-/*"News" Iframe*/
-.actu iframe {
-  box-shadow: 0px 0px 20px -5px var(--tertiary);
-  border-radius: 7px;
-}
-/*Left and Team Title*/
-.actu h1,
-#equipe {
-  color: var(--whiteish);
-  margin: 10px auto 25px auto !important;
-  border-bottom: 2px solid var(--whiteish);
-  width: fit-content;
-  font-family: spectral, arial;
-}
-/***MISSION***/
-/*Section Wrapper*/ /*************************************************************/
-.missionWrapper {
-  height: 100vh;
-}
-/*Mission Title*/
-#mission {
-}
-.mission {
-}
-.mission p {
 }
 
 /***TEAM***/
@@ -219,11 +285,13 @@ nav .logo {
   flex-direction: column;
   margin: auto;
   display: flex;
-  width: 89%; /**/
+  width: 89%;
+  /**/
   justify-content: space-between;
   border-radius: 7px;
   height: auto;
 }
+
 /*Team zone*/
 .team {
   margin: auto;
@@ -232,13 +300,15 @@ nav .logo {
   text-align: justify;
   flex-wrap: wrap;
 }
+
 .equipe .photo {
   max-width: 100%;
   max-height: 150px;
   margin: auto auto 35px auto;
   border-radius: 50%;
-  box-shadow: 2px 2px 7px 0.5px var(--blackish);
+  box-shadow: 2px 2px 7px 0.5px var(--tertiary);
 }
+
 .member {
   display: flex;
   flex-direction: column;
@@ -260,10 +330,12 @@ nav .logo {
   transition: 0.4s;
   box-shadow: 7px 7px 10px 2px #454545;
 }
+
 .member:hover {
   transform: scale(1.05) perspective(800px) rotateY(0deg);
   box-shadow: 0px 10px 10px 2px #454545;
 }
+
 .member h2 {
   font-size: 20px;
   margin: -20px auto 0 auto;
@@ -273,11 +345,13 @@ nav .logo {
   border-bottom: 1.5px solid var(--tertiary);
   color: var(--main);
 }
+
 .member h3 {
   color: var(--secondary);
   font-size: 16px;
   margin: 5px 0 10px 0;
 }
+
 .member p {
   margin: auto;
   font-size: 15px;
@@ -286,7 +360,8 @@ nav .logo {
 }
 
 /***FOOTER***/
-- /***CONTACT***/
+-
+/***CONTACT***/
 
 /***ANIMATION***/
 /*logo swing*/
@@ -296,42 +371,52 @@ nav .logo {
     transform-origin: center;
     transform: perspective(1200px) rotateY(15deg);
   }
+
   25% {
     transform: translateX(-10);
   }
+
   50% {
     transform: translateX(10px);
     transform-origin: center;
     transform: perspective(1200px) rotateY(-15deg);
   }
+
   100% {
     transform: translateX(0px);
     transform-origin: center;
     transform: perspective(1200px) rotateY(15deg);
   }
 }
+
 /*Background anim*/
 @keyframes move-dot1 {
   0% {
     transform: translateX(-50%) translateY(-50%);
   }
+
   20% {
     transform: translateX(-50%) translateY(30%);
   }
+
   100% {
     transform: translateX(-50%) translateY(30%);
   }
 }
+
 @keyframes move-dot2 {
   0% {
     transform: translateX(-50%) translateY(-50%);
   }
+
   15% {
     transform: translateX(-50%) translateY(-10%);
   }
+
   30% {
     transform: translateX(-10%) translateY(-10%);
   }
+
   100% {
     transform: translateX(-10%) translateY(-10%);
   }
@@ -348,6 +433,7 @@ nav .logo {
   height: 90vmin;
   width: 90vmin;
 }
+
 .animation-example > .item {
   position: absolute;
   top: 0;
@@ -358,21 +444,26 @@ nav .logo {
   transform-origin: 50% 100%;
   pointer-events: none;
 }
+
 .animation-example > .item:nth-child(2) {
   transform: translateX(-50%) rotate(90deg);
 }
+
 .animation-example > .item:nth-child(3) {
   transform: translateX(-50%) rotate(180deg);
 }
+
 .animation-example > .item:nth-child(4) {
   transform: translateX(-50%) rotate(270deg);
 }
+
 .animation-example > .item > .line {
   height: 100%;
   width: calc(50% + 1px);
   /*border-right: 2px dashed #5bc0eb;*/
   border-right: 2px dashed var(--whiteish);
 }
+
 .animation-example > .item > .dot {
   position: absolute;
   left: 50%;
@@ -382,6 +473,7 @@ nav .logo {
   width: 100%;
   animation: move-dot1 5.5s linear infinite;
 }
+
 .animation-example > .item > .dot::after {
   content: "";
   position: absolute;
@@ -395,6 +487,7 @@ nav .logo {
 
   border-radius: 50%;
 }
+
 .animation-example > .item > .circle {
   position: absolute;
   top: 0;
@@ -405,21 +498,26 @@ nav .logo {
   border-radius: 50%;
   background: #5bc0eb;
 }
+
 .animation-example > .item.-type2 {
   top: 0;
   left: 0;
   transform: none;
   transform-origin: 100% 100%;
 }
+
 .animation-example > .item.-type2:nth-child(5) {
   transform: scaleX(-100%);
 }
+
 .animation-example > .item.-type2:nth-child(6) {
   transform: scaleX(-100%) scaleY(-100%);
 }
+
 .animation-example > .item.-type2:nth-child(7) {
   transform: scaleY(-100%);
 }
+
 .animation-example > .item.-type2 > .line {
   position: absolute;
   top: 30%;
@@ -430,40 +528,51 @@ nav .logo {
   border-left: 2px dashed var(--whiteish);
   border-bottom: 2px dashed var(--whiteish);
 }
+
 .animation-example > .item.-type2 > .dot {
   top: 30%;
   left: 30%;
   animation: move-dot2 4s linear infinite;
 }
+
 .animation-example > .item.-type2 > .circle {
   top: 30%;
   left: 30%;
   transform: translateX(-50%) translateY(-50%);
 }
+
 .animation-example > .item:nth-of-type(1) > .dot {
   animation-delay: 0;
 }
+
 .animation-example > .item:nth-of-type(7) > .dot {
   animation-delay: 0.5s;
 }
+
 .animation-example > .item:nth-of-type(2) > .dot {
   animation-delay: 1s;
 }
+
 .animation-example > .item:nth-of-type(6) > .dot {
   animation-delay: 1.5s;
 }
+
 .animation-example > .item:nth-of-type(3) > .dot {
   animation-delay: 2s;
 }
+
 .animation-example > .item:nth-of-type(5) > .dot {
   animation-delay: 2.5s;
 }
+
 .animation-example > .item:nth-of-type(4) > .dot {
   animation-delay: 3s;
 }
+
 .animation-example > .item:nth-of-type(8) > .dot {
   animation-delay: 3.5s;
 }
+
 .animation-example > .center {
   position: absolute;
   top: 50%;
@@ -472,6 +581,7 @@ nav .logo {
   height: 50%;
   width: 50%;
 }
+
 .animation-example > .center > .circle {
   position: absolute;
   top: 50%;
@@ -479,17 +589,20 @@ nav .logo {
   transform: translateX(-50%) translateY(-50%);
   border-radius: 50%;
 }
+
 .animation-example > .center > .circle:nth-child(1) {
   height: 100%;
   width: 100%;
   background-color: var(--secondary);
   box-shadow: 0 0 3vmin rgba(0, 0, 0, 0.1);
 }
+
 .animation-example > .center > .circle:nth-child(2) {
   height: 80%;
   width: 80%;
   border: 2px solid var(--whiteish);
 }
+
 .animation-example > .center > .circle:nth-child(3) {
   height: 50%;
   width: 50%;
@@ -515,6 +628,7 @@ nav .logo {
     margin: 25px auto 25px auto;
     padding: 0;
   }
+
   .actu {
     height: 500px;
   }
@@ -533,18 +647,22 @@ nav .logo {
     justify-content: center;
     padding: unset;
   }
+
   nav .logo {
     float: unset;
     margin: auto;
   }
+
   .txtWrapper {
     display: flex;
     width: 100%;
     justify-content: center;
   }
+
   .txtWrapper a {
     margin: 15px 10px 10px 10px;
   }
+
   #intro {
     margin: 180px auto;
   }
@@ -555,20 +673,25 @@ nav .logo {
   #intro .logo {
     display: none;
   }
+
   .intro {
     flex: unset;
   }
+
   .intro h1 {
     width: 60%;
     font-size: 22px;
     color: var(--secondary);
   }
+
   .under {
     width: 90%;
   }
+
   .firstP {
     text-align: center !important;
   }
+
   .intro strong {
     font-size: 20px;
   }
@@ -580,6 +703,7 @@ nav .logo {
   .txtWrapper a {
     font-size: 15px;
   }
+
   #intro {
     padding: 0;
     margin-top: 250px !important;
@@ -597,6 +721,7 @@ nav .logo {
     text-align: center;
     margin: 0;
   }
+
   .txtWrapper a {
     padding: 5px;
     margin: 0;
@@ -609,12 +734,10 @@ nav .logo {
     flex-direction: column;
     border: 1px solid var(--whiteish);
   }
+
   .txtWrapper a:focus,
   .txtWrapper a:active,
   .txtWrapper a:hover {
     background-color: var(--secondary);
-  }
-  #intro {
-    margin-top: 200px;
   }
 }
