--- a/index.css
+++ b/index.css
@@ -136,6 +136,8 @@ nav .logo {
   background-color: var(--whiteish);
   background-position: center;
   background-size: cover;
+  display: flex;
+  justify-content: center;
   background-repeat: no-repeat;
 }
 
@@ -165,23 +167,19 @@ nav .logo {
 
 /*Lower zone*/
 .under {
-  /*
   width: 70%;
   margin: 20px auto;
   padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  */
 }
 
 /*Paragraphs*/
 .under p {
-  /*
   font-size: 20px;
   text-align: left;
   line-height: 150%;
-  */
 }
 
 /*Left*/
@@ -276,7 +274,33 @@ nav .logo {
 .lastP {
   text-align: justify !important;
 }
-
+..missionWrapper2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: auto;
+  width: 80%;
+  background-color: red;
+  /*height: 100vh;*/
+}
+.left .right {
+  flex: 1;
+  width: 500px;
+  height: 500px;
+  /**/
+  /*
+  background: url("./ressources/background7.webp");
+  background-color: var(--whiteish);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  */
+  background-color: red;
+  border-radius: 12px;
+  position: relative;
+  transition: 0.4s;
+  box-shadow: 7px 7px 10px 2px #454545;
+}
 /***TEAM***/
 /*Section Wrapper*/
 .equipe {
