--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,11 +1,10 @@
 /******* Customized Bootstrap ********/
+$primary: #21759c;
+$secondary: #e84e24;
+$light: #f9f7fd;
+$dark: #434341;
 
-$primary: #F3BD00;
-$secondary: #757575;
-$light: #F3F6F8;
-$dark: #0C2B4B;
-
-$font-family-base: 'Work Sans', sans-serif;
+$font-family-base: "Work Sans", sans-serif;
 
 $body-color: $secondary;
 
