--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,19 @@
 /********** Template CSS **********/
 :root {
-    --primary: #F3BD00;
+    /*
+    --primary: #f3bd00;
     --secondary: #757575;
-    --light: #F3F6F8;
-    --dark: #0C2B4B;
-}
+    --light: #f3f6f8;
+    --dark: #0c2b4b;
+    */
 
+    /*Color Variables*/
+    --light: #f9f7fd;
+    --primary: #21759c;
+    --primaryLighter: #2e9bcd;
+    --secondary: #e84e24;
+    --dark: #434341;
+}
 .py-6 {
     padding-top: 6rem;
     padding-bottom: 6rem;
@@ -24,31 +32,40 @@
     z-index: 99;
 }
 
-
 /*** Spinner ***/
 #spinner {
     opacity: 0;
     visibility: hidden;
-    transition: opacity .5s ease-out, visibility 0s linear .5s;
+    transition: opacity 0.5s ease-out, visibility 0s linear 0.5s;
     z-index: 99999;
 }
 
 #spinner.show {
-    transition: opacity .5s ease-out, visibility 0s linear 0s;
+    transition: opacity 0.5s ease-out, visibility 0s linear 0s;
     visibility: visible;
     opacity: 1;
 }
 
+.spinner-grow text-primary {
+    /*spinner color PERSO**********************/
+    color: red !important;
+}
 
 /*** Button ***/
 .btn {
     font-weight: 500;
-    transition: .5s;
+    transition: 0.5s;
+    background-color: var(--primary);
+    border: var(--primary);
 }
 
 .btn.btn-primary,
 .btn.btn-outline-primary:hover {
-    color: #FFFFFF;
+    color: #ffffff;
+}
+.btn:hover {
+    background-color: var(--secondary);
+    border: var(--secondary);
 }
 
 .btn-square {
@@ -76,23 +93,23 @@
     font-weight: normal;
 }
 
-
 /*** Navbar ***/
 .navbar.sticky-top {
     top: -100px;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .navbar .navbar-brand,
 .navbar a.btn {
-    height: 80px
+    height: 80px;
 }
 
 .navbar .navbar-nav .nav-link {
     margin-right: 30px;
     padding: 25px 0;
     color: var(--dark);
-    font-weight: 500;
+    /*font-weight: 500;*/
+    font-weight: bold;
     text-transform: uppercase;
     outline: none;
 }
@@ -109,16 +126,28 @@
     font-weight: 900;
     vertical-align: middle;
     margin-left: 8px;
+    /**/
+    display: none;
 }
 
+.dropdown-item {
+    background-color: var(--primary);
+    color: var(--light);
+}
+.dropdown-item:hover,
+.dropdown-item:active,
+.dropdown-item:focus {
+    background-color: var(--primaryLighter) !important;
+    color: var(--light);
+}
 @media (max-width: 991.98px) {
-    .navbar .navbar-nav .nav-link  {
+    .navbar .navbar-nav .nav-link {
         margin-right: 0;
         padding: 10px 0;
     }
 
     .navbar .navbar-nav {
-        border-top: 1px solid #EEEEEE;
+        border-top: 1px solid #eeeeee;
     }
 }
 
@@ -130,17 +159,38 @@
         top: 150%;
         opacity: 0;
         visibility: hidden;
-        transition: .5s;
+        transition: 0.5s;
+        padding: 0;
     }
 
     .navbar .nav-item:hover .dropdown-menu {
         top: 100%;
         visibility: visible;
-        transition: .5s;
+        transition: 0.5s;
         opacity: 1;
     }
 }
 
+/*Header Logo*/
+nav .logo {
+    /*position: relative;
+    float: left;*/
+    margin: 11px 50px 11px 0;
+    max-height: 100%;
+}
+.title {
+    font-size: 20px;
+    margin: auto;
+    text-align: center;
+    text-align: left;
+
+    /*background: var(--primary);
+    padding: 10px;
+    color: var(--light);*/
+}
+.fa-plus-square {
+    font-size: 20px;
+}
 
 /*** Header ***/
 .carousel-caption {
@@ -152,8 +202,19 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    background: rgba(0, 0, 0, .75);
+    /*background: rgba(0, 0, 0, 0.75);*/
+    background: rgba(0, 0, 0, 0.45);
     z-index: 1;
+}
+.introText1 {
+    justify-content: flex-end !important;
+}
+.introText2 {
+    justify-content: flex-start !important;
+}
+.introText1 h1,
+.introText2 h1 {
+    font-size: 50px !important;
 }
 
 .carousel-control-prev,
@@ -174,7 +235,7 @@
         position: relative;
         min-height: 450px;
     }
-    
+
     #header-carousel .carousel-item img {
         position: absolute;
         width: 100%;
@@ -184,14 +245,14 @@
 }
 
 .page-header {
-    background: linear-gradient(rgba(0, 0, 0, .75), rgba(0, 0, 0, .75)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+        url(../img/carousel-1.jpg) center center no-repeat;
     background-size: cover;
 }
 
-.breadcrumb-item+.breadcrumb-item::before {
+.breadcrumb-item + .breadcrumb-item::before {
     color: #999999;
 }
-
 
 /*** Facts ***/
 @media (min-width: 991.98px) {
@@ -202,11 +263,14 @@
     }
 }
 
-
 /*** Courses ***/
 .courses {
     min-height: 100vh;
-    background: linear-gradient(rgba(255, 255, 255, .9), rgba(255, 255, 255, .9)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(
+            rgba(255, 255, 255, 0.9),
+            rgba(255, 255, 255, 0.9)
+        ),
+        url(../img/carousel-1.jpg) center center no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
@@ -220,10 +284,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba(0, 0, 0, .5);
+    background: rgba(0, 0, 0, 0.5);
     overflow: hidden;
     opacity: 0;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .courses-item:hover .courses-overlay {
@@ -231,14 +295,13 @@
     opacity: 1;
 }
 
-
 /*** Team ***/
 .team-items {
-    margin: -.75rem;
+    margin: -0.75rem;
 }
 
 .team-item {
-    padding: .75rem;
+    padding: 0.75rem;
 }
 
 .team-item::after {
@@ -248,8 +311,8 @@
     height: 0;
     top: 0;
     left: 0;
-    background: #FFFFFF;
-    transition: .5s;
+    background: #ffffff;
+    transition: 0.5s;
     z-index: -1;
 }
 
@@ -267,17 +330,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba(0, 0, 0, .75);
+    background: rgba(0, 0, 0, 0.75);
     overflow: hidden;
     opacity: 0;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .team-item:hover .team-social {
     height: 100%;
     opacity: 1;
 }
-
 
 /*** Testimonial ***/
 .testimonial-carousel .owl-dots {
@@ -296,7 +358,7 @@
     height: 20px;
     background: transparent;
     border: 2px solid var(--primary);
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .testimonial-carousel .owl-dot.active {
@@ -310,7 +372,6 @@
     height: 150px;
 }
 
-
 /*** Footer ***/
 .footer .btn.btn-link {
     display: block;
@@ -320,7 +381,7 @@
     color: var(--light);
     font-weight: normal;
     text-transform: capitalize;
-    transition: .3s;
+    transition: 0.3s;
 }
 
 .footer .btn.btn-link::before {
