--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ body {
     animation: theme 21s linear infinite;
 }
 
+.bg-light {
+    background: unset !important;
+}
+
 body:after,
 body:before {
     content: "";
@@ -31,7 +35,6 @@ body:before {
     width: 100vmax;
     height: 100vmax;
     background: rgba(255, 255, 255, 0.8);
-    /*background: var(--light);*/
     animation: background 90s linear infinite;
     pointer-events: none;
 }
@@ -87,6 +90,12 @@ body:before {
     right: 30px;
     bottom: 30px;
     z-index: 99;
+    transition: 0.4s;
+    border: none ! !important;
+}
+
+/ .back-to-top:hover {
+    background-color: var(--secondary) !important;
 }
 
 /*** Spinner ***/
@@ -218,7 +227,9 @@ nav {
 .dropdown-item:hover,
 .dropdown-item:active,
 .dropdown-item:focus {
-    background-color: var(--primaryLighter) !important;
+    /*background-color: var(--primaryLighter) !important;*/
+    background-color: var(--secondary) !important;
+
     color: var(--light);
 }
 
@@ -455,16 +466,18 @@ nav .logo {
     color: var(--dark);
 }
 
+/*** Actu ***/
+.Actu iframe {
+    height: 700px !important;
+}
+
 /*** Courses ***/
 
 .outils {
     margin-top: 50px;
 }
 
-.courses
-
-/*.wow*/
-p {
+.courses p {
     text-align: center !important;
     /**/
 }
@@ -488,7 +501,8 @@ p {
     background: unset;
 }
 
-.courses h1 {
+.courses h1,
+.Actu h1 {
     font-size: 26px;
     /*color: var(--primary);*/
     color: var(--secondary);
@@ -661,7 +675,15 @@ p {
 
 .footer {
     background-color: var(--light) !important;
+    padding: 10px;
     color: var(--dark);
+}
+
+.subFoot {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /*align-items: center;*/
 }
 
 .footer p {
@@ -669,7 +691,8 @@ p {
 }
 
 .footer a {
-    color: var(--primary) !important;
+    color: var(--secondary) !important;
+    margin: auto;
 }
 
 .footLogo {
@@ -677,6 +700,11 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0;
+}
+
+.footLogo img {
+    max-width: 80px;
 }
 
 .footLogo h4 {
@@ -684,6 +712,43 @@ p {
     margin-left: -25px;
     padding: 0;
     text-align: center;
+}
+
+.modalB {
+    all: unset !important;
+    cursor: pointer !important;
+    margin: auto !important;
+    width: 100% !important;
+    color: var(--primary) !important;
+    text-align: center !important;
+    border: none;
+}
+
+.modalB:hover,
+.modalB:focus,
+.modalB:active,
+.modalB:visited {
+    background: inherit;
+    color: inherit;
+    border: none;
+}
+
+.modal-title {
+    color: var(--secondary);
+}
+
+.modal-header {
+    border-color: var(--primary);
+}
+
+.modal-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.modal-body div {
+    margin: 15px;
 }
 
 .footer .btn.btn-link {
@@ -695,6 +760,12 @@ p {
     font-weight: normal;
     text-transform: capitalize;
     transition: 0.3s;
+}
+
+.lastF {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .footer .btn.btn-link::before {
@@ -710,16 +781,4 @@ p {
     color: var(--primary);
     letter-spacing: 1px;
     box-shadow: none;
-}
-
-.copyright {
-    background: #092139;
-}
-
-.copyright a {
-    color: var(--primary);
-}
-
-.copyright a:hover {
-    color: var(--light);
 }
